# analyze-git-projects

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
analyze-git-projects/: analyzer.py  display.py
analyze_git_projects/: __init__.py  agent.py  analyzer.py  cli.py  config.py  display.py  github_mcp_analyzer.py  logging.py  main.py  mcp_server_factory.py  models.py
analyze_git_projects/models/: __init__.py  other_models.py  simple_project_schema.py
examples/: analyze_documentation.py  analyze_documentation_example.py  analyze_repo_for_portfolio.py  check_language_and_framework.py  zen_master_code_explainer.py
git_projects_analyzer/: models.py
gitingest_analyzer/: README.md  __init__.py  cli.py  main.py
tests/: test_logging.py  test_simple_project.py  test_updated_agent.py
